@startuml
class InventoryManagementApplication{
    +main()
        launch()
}

class InventoryManagementApplicationController{
    events handlers for buttons, tables, etc..
    +clearItems()
}

class InventoryList{
    +observableList
    +filteredList

    +addItem(serialNumber, name, value)
    +getInventoryList()
    +getFilteredList()
    +clearItems()
    +deleteItem(inventoryItem)
    +searchFindItem(item, searchText)
    +filterItems(searchText)
    +updateItem(serialNumber, name, value, listIndex)
}

class InventoryItem{
    -serialNumber
    -name
    -value
    +setSerialNumber(serialNumber)
    +getSerialNumber()
    +setName(name)
    +getName()
    +setValue(value)
    +getValue()
}

class CheckInput{
    +checkSerialNumber((serialNumber)
    +checkSerialNumberDuplicate(serialNumber, list)
    +checkName(name)
    +checkValue(value)
    +showErrorPopup(message)
}

class SaveAndLoad{
    +saveTSVFile(File, ObservableList)
    +saveHTMLFile(File, ObservableList)
    +saveJSONFile(File, ObservableList)
    +loadTSVFile(File, ObservableList)
    +loadHTMLFile(File, ObservableList)
    +loadJSONFile(File, ObservableList)
}

InventoryManagementApplication <|-- InventoryManagementApplicationController
InventoryManagementApplication <|-- InventoryItem
InventoryManagementApplication <|-- InventoryList
InventoryManagementApplication <|-- CheckInput
InventoryManagementApplication <|-- SaveAndLoad


@enduml